added a shuffle method to mem.js

--- a/memory.html
+++ b/memory.html
@@ -1,34 +1,33 @@
 <html>
   <head>
-    <title>Jquery App</title>
+    <title>Memory Game</title>
     <link rel="stylesheet" href="styles.css"/>
   </head>
 
 <body>
   <table>
     <tr>
-      <td id="r_1_1">one</td>
-      <td id="r_1_2">two</td>
-      <td id="r_1_3">three</td>
+      <td>one</td>
+      <td>two</td>
+      <td>three</td>
     </tr>
  
-
     <tr>
-      <td id="r_2_1">one</td>
-      <td id="r_2_2">two</td>
-      <td id="r_2_3">three</td>
+      <td>one</td>
+      <td>two</td>
+      <td>three</td>
     </tr>
 
     <tr>
-      <td id="r_3_1">one</td>
-      <td id="r_3_2">two</td>
-      <td id="r_3_3">three</td>
+      <td>one</td>
+      <td>two</td>
+      <td>three</td>
     </tr>
 
     <tr>
-      <td id="r_4_1">one</td>
-      <td id="r_4_2">two</td>
-      <td id="r_4_3">three</td>
+      <td>one</td>
+      <td>two</td>
+      <td>three</td>
     </tr>
   </table>
 
